add PA2